// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dont explode on primitives 1`] = `
Object {
  "message": "0",
  "name": "Error",
  "stack": ArrayContaining [
    Any<String>,
  ],
}
`;

exports[`dont explode on primitives 2`] = `
Object {
  "message": "string",
  "name": "Error",
  "stack": ArrayContaining [
    Any<String>,
  ],
}
`;

exports[`dont explode on primitives 3`] = `
Object {
  "debug": Object {
    "err": 0n,
    "typeofErr": "bigint",
  },
  "message": "",
  "name": "Error",
  "stack": ArrayContaining [
    Any<String>,
  ],
}
`;

exports[`dont explode on primitives 4`] = `
Object {
  "debug": Object {
    "err": false,
    "typeofErr": "boolean",
  },
  "message": "",
  "name": "Error",
  "stack": ArrayContaining [
    Any<String>,
  ],
}
`;

exports[`dont explode on primitives 5`] = `
Object {
  "debug": Object {
    "err": Symbol(kaboom),
    "typeofErr": "symbol",
  },
  "message": "",
  "name": "Error",
  "stack": ArrayContaining [
    Any<String>,
  ],
}
`;

exports[`dont explode on voids 1`] = `
Object {
  "debug": Object {
    "err": null,
    "typeofErr": "object",
  },
  "message": "",
  "name": "Error",
  "stack": ArrayContaining [
    Any<String>,
  ],
}
`;

exports[`dont explode on voids 2`] = `
Object {
  "debug": Object {
    "err": undefined,
    "typeofErr": "undefined",
  },
  "message": "",
  "name": "Error",
  "stack": ArrayContaining [
    Any<String>,
  ],
}
`;
